Закончить репозиторий и ItemMapper